--- a/RODEC.View/MainWindow.xaml
+++ b/RODEC.View/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="41" Margin="211,153,0,0" VerticalAlignment="Top" Width="71" Click="button_Click"/>
+
     </Grid>
 </Window>
