--- a/RODEC.View/MainWindow.xaml
+++ b/RODEC.View/MainWindow.xaml
@@ -7,7 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="41" Margin="211,153,0,0" VerticalAlignment="Top" Width="71" Click="button_Click"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="41" Margin="26,208,0,0" VerticalAlignment="Top" Width="71" Click="button_Click"/>
+        <Button x:Name="button1" Content="Exportar Este" HorizontalAlignment="Left" Height="41" Margin="267,208,0,0" VerticalAlignment="Top" Width="227" Click="button1_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="26" Margin="320,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="26" Margin="267,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
+        <Label x:Name="label" Content="Loja" HorizontalAlignment="Left" Height="26" Margin="267,133,0,0" VerticalAlignment="Top" Width="48"/>
+        <Label x:Name="label1" Content="Código" HorizontalAlignment="Left" Height="26" Margin="320,133,0,0" VerticalAlignment="Top" Width="174"/>
 
     </Grid>
 </Window>
