--- a/RODEC.View/MainWindow.xaml
+++ b/RODEC.View/MainWindow.xaml
@@ -5,14 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RODEC.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="41" Margin="26,208,0,0" VerticalAlignment="Top" Width="71" Click="button_Click"/>
-        <Button x:Name="button1" Content="Exportar Este" HorizontalAlignment="Left" Height="41" Margin="267,208,0,0" VerticalAlignment="Top" Width="227" Click="button1_Click"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="26" Margin="320,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174"/>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="26" Margin="267,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label" Content="Loja" HorizontalAlignment="Left" Height="26" Margin="267,133,0,0" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label1" Content="Código" HorizontalAlignment="Left" Height="26" Margin="320,133,0,0" VerticalAlignment="Top" Width="174"/>
-
+        Title="MainWindow" Height="457.387" Width="777.557">
+    <Grid Background="LightGray">
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="26" Margin="512,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="26" Margin="565,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174"/>
+        <Button x:Name="btnExportSingle" Content="Exportar Este" HorizontalAlignment="Left" Height="41" Margin="512,120,0,0" VerticalAlignment="Top" Width="227" Click="btnExportSingleClick" />
+        <Button x:Name="btnExport" Content="Iniciar" HorizontalAlignment="Left" Height="41" Margin="10,376,0,0" VerticalAlignment="Top" Width="71" Click="btnExportClick" IsEnabled="{Binding CanRun}"/>
+        <Button x:Name="btnStop" Content="Parar" HorizontalAlignment="Left" Height="41" Margin="95,376,0,0" VerticalAlignment="Top" Width="65" Click="btnStopClick" IsEnabled="{Binding CanStop}"/>
+        <Label x:Name="label" Content="Loja" HorizontalAlignment="Left" Height="26" Margin="512,45,0,0" VerticalAlignment="Top" Width="48"/>
+        <Label x:Name="label1" Content="Código" HorizontalAlignment="Left" Height="26" Margin="565,45,0,0" VerticalAlignment="Top" Width="174"/>
+        <Label x:Name="lblStatus" Content="{Binding Status}"  HorizontalAlignment="Left" Height="53" Margin="10,4,0,0" VerticalAlignment="Top" Width="309" FontSize="32" Foreground="DarkSlateGray"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="306" Margin="10,57,0,0" Background="White" TextWrapping="Wrap" Text="{Binding StringLogs}" VerticalAlignment="Top" Width="497"/>
     </Grid>
 </Window>
