--- a/RODEC.View/MainWindow.xaml
+++ b/RODEC.View/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RODEC.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="457.387" Width="777.557">
+        Title="RODEC" Height="457.387" Width="777.557">
     <Grid Background="LightGray">
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="26" Margin="512,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="26" Margin="565,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174"/>
